# chissor

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE.EXPAT  README.md
.github/workflows/: ci-check.yaml  release.yaml
dicts/: dict.txt.small
locales/: en.toml  info.toml  lang.toml  zh-CN.toml  zh-HK.toml
src/: main.rs
