[package]
name = "chissor"
version = "0.2.0"
authors = ["Wing Hei Chan <whmunkchan@outlook.com>"]
edition = "2021"
description = "GUI application for Chinese word segmentation"
repository = "https://github.com/usaoc/chissor"
license = "MIT"

[profile.release]
strip = true
lto = true
panic = "abort"

[dependencies]
eframe = { version = "0.30", default-features = false, features = [
  "accesskit",
  "wayland",
  "wgpu",
  "x11",
] }
rfd = "0.15"
rust-i18n = "3.1"
jieba-rs = { version = "0.7", default-features = false }
