[package]
name = "chissor"
version = "0.2.0"
authors = ["Wing Hei Chan <whmunkchan@outlook.com>"]
edition = "2024"
description = "GUI application for Chinese word segmentation"
repository = "https://github.com/usaoc/chissor"
license = "MIT"

[profile.release]
strip = true
lto = true
panic = "abort"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
  "accesskit",
  "wayland",
  "wgpu",
  "x11",
] }
wgpu = { version = "27", default-features = true }
rfd = "0.16"
rust-i18n = "3.1"
jieba-rs = { version = "0.8", default-features = false }

[package.metadata.i18n]
available-locales = ["en", "zh-CN", "zh-HK"]
